--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,26 +1,42 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "# My First Machine Learning Algorithm\n",
+    "### And maybe yours too\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "from sklearn.ensemble import RandomForestRegressor"
+    "Hi! I'm Douglas and I'm a Data Science enthusiast trying to learn everything I think I need to become a Data Scientist.\n",
+    "\n",
+    "I took a small step outside my studying plans and did a very quick Kaggle course on [**Intro to Machine Learning**](https://medium.com/r/?url=https%3A%2F%2Fwww.kaggle.com%2Flearn%2Fintro-to-machine-learning). There they use the famous housing prices example with both Melbourn and Iowa data and guide you through creating **your first regression model** with the Decision Tree and Random Forest algorithms.\n",
+    "\n",
+    "![Kaggle Completion Certificate](img/certificate.png)\n",
+    "\n",
+    "Well, if you read my [**About me**](https://medium.com/@douglas.rochedo/about-me-989738f3fae3) post you know this isn't really my first machine learning algorithm, I actually have a bit of experience with machine learning. But this is my first time using Decision Tree and Random Forest algorithms and it might as well be your first algorithm ever, so let's get right into it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Data\n",
+    "\n",
+    "For this tutorial-ish article, I chose not to use the same housing prices dataset used in the Kaggle course. Instead, I went on Kaggle itself and chose a [**Used Car Prices Prediction dataset**](https://medium.com/r/?url=https%3A%2F%2Fwww.kaggle.com%2Fdatasets%2Fvijayaadithyanvg%2Fcar-price-predictionused-cars), a pretty new one I might say. To take a quick look into it we are going to use the Pandas library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(301, 9)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -134,19 +150,31 @@
        "4       Dealer       Manual      0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "dataset = pd.read_csv(\"car data.csv\")\n",
+    "print(dataset.shape)\n",
     "dataset.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First of all we see the shape of our dataset: 301 rows and 9 columns. Each one of those rows represent an used car, and each of those columns represent a feature from those cars. We see we have numerical features (Year, Selling_Price, Present_Price, Driven_kms and Owner) and categorical features (Car_Name, Fuel_Type, Selling_Type and Transmission).\n",
+    "\n",
+    "The purpose of this article is not to engange in the matters of Data Cleaning or Data Wrangling. But hence this is not a dataset create with the purpose of being used in a tutorial, it might (and does) have some small problemns we might want to solve. And that, very fortunetly, are pretty easy to solve. First of all we check for null (or, rather, missing) values in our datset. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +192,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,8 +202,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That asures us that in no column is there an empty or missing value. That is definetly a relief.\n",
+    "\n",
+    "Further on, we check for duplicates in the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,39 +221,56 @@
        "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two duplicates means we have 2 cars in our dataset that are, each one, equal to some other car (not necessarily equal to one another). That will be a problemn if it comes to affect the trainig of our model. Thus, we are going to drop those duplicates and reasure the there are no other ones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "(299, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.drop_duplicates(inplace=True)\n",
+    "print(dataset.duplicated().sum())\n",
+    "print(dataset.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see we have now 2 less cars in our dataset, but that is good because now each observation is completly singular. \n",
+    "\n",
+    "### Creating our first Decision Tree\n",
+    "\n",
+    "So, to create, train and test a Decision Tree (or any Machine Learning Model, for that matter) we first need to know what we want to predict and what features we will use to try and predict it. In this case, I want to predict the Present Price of the used car and thus I save that single column in what would be a labels table called y.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.drop_duplicates(inplace=True)\n",
-    "dataset.duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +291,7 @@
        "Name: Present_Price, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,8 +303,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, in order to decide which features we will use, I've used a simple decisive factor: we will not engineer features. With that I mean that, since Decision Trees, even though they should, do not handle categorical data (or, at least, the one we are using, from Scikit-learn doesn't) we will dump categorical features from our model. In other words, the only features we are going to use are the numerical ones: Year, Selling price, Driven kilometers and owner, which is actually categorical, but also numerical. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +397,7 @@
        "4  2014           4.60       42450      0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,17 +409,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "X_train, X_test, y_train,  y_test = train_test_split(X, y, random_state=7)"
+    "To later on evaluate our model with data it has not seen before, we wil use Scikit-learns train-test splitter function to have a randomized split between data to train the model and data to test it later. We will set a random state to it with the number 7 so it runs exactly the same every time we run it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train,  y_test = train_test_split(X, y, random_state=7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, to actually create our model once and for all, we will use a Scikit-learns class that runs a Decision Tree for Regression (finding continuous values) called, naturally, DecisionTreeRegressor. We will than fit it - or train it, as you wish - with the training data. At last, we will predict the labels for the X_test data and compare it to the actual labels for those cars, calculating the mean absolute error of that comparison so we can have an idea of how well (or poorly) our model did."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -370,15 +448,26 @@
     }
    ],
    "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "\n",
     "default_DT = DecisionTreeRegressor(random_state=7)\n",
     "default_DT.fit(X_train, y_train)\n",
-    "mae = mean_absolute_error(y_test, default_DT.predict(X_test))\n",
-    "print(mae)"
+    "mae_df = mean_absolute_error(y_test, default_DT.predict(X_test))\n",
+    "print(mae_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seeing an error of merly 1.67 leads us into thinking this is a fantastic model. But, if we analyze the data we will see that that number is not far from the average of the labes we want to predict, that is, the present price of the cars. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -394,13 +483,26 @@
     "average_present_price = y.mean()\n",
     "print(average_present_price)\n",
     "\n",
-    "relative_error = round(mae/average_present_price *100, 2)\n",
+    "relative_error = round(mae_df/average_present_price *100, 2)\n",
     "print(relative_error, \"%\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, that error actually means a 22.14% average error in the predictions for that dataset. Is it enough? It depends on the scenario, how much time and money one can spend to further improve this model and far more other factors. In our case, we still want to improve it by as much as we can (or at least for as much as this Kaggle course has taught us to).\n",
+    "\n",
+    "### Tuning the Parameters\n",
+    "\n",
+    "Yes, I am aware the corect name is hyperparameters, but Kaggle did not get into that matter so neither will I. If you are unfamiliar, the parameters we are talking about are some characteristics of the Decision Tree that can interfere with its performance. We will not talk much about Overfiting or Underfiting here, but those two scenarios can happen and often worse the models performance. In the case of Decision Trees, one parameter we can adjust to improve the overall performance by fleeing from these problmens is the maximum number of leafs. Increasing the number of leafs will lead the model to fit to much the training data and perform poorly on other data such as the test data. On the other hand, if we have only a small number of leaves, it will not fit our data at all and perform pooly on train and test data alike. \n",
+    "\n",
+    "So, to try and solve that problemn and find out if it really is what is hurting our models performance, we shall test a few possibilities for the maximum number of leafs and chose the one with the best performance, or the smaller mean absolute error. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -418,6 +520,8 @@
     }
    ],
    "source": [
+    "\n",
+    "import numpy as np\n",
     "max_leaf_sizes = [5, 10, 50, 100, 500]\n",
     "maes = []\n",
     "\n",
@@ -438,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -455,8 +559,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see the error has slightly decreased. In some cases, a 1% improvement may be something to party over. But, in our case, that is still some things we can do to further improve this model.\n",
+    "\n",
+    "### Random Forests\n",
+    "\n",
+    "The Ensemble theory says (and proves) that, if you properly join a group of more than one model with different parameters (or, rather, hyperparameters, if you shall) and use them to get a joint result, you will **always** get a better performance than with just one model (at least that is what the theory says). Random Forests are an Ensemble application with just Decision Trees as building blocks for a greater joint model. It creates a large number of models and uses them in conjunction to predict our label and, in theory, it should work best than even the better performing single Decision Tree. We will use Scikit-learns RandomForestRegressor class for this test."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -468,15 +583,18 @@
     }
    ],
    "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "\n",
     "RF = RandomForestRegressor(random_state=7)\n",
     "RF.fit(X_train, y_train)\n",
-    "mae = mae = mean_absolute_error(y_test, RF.predict(X_test))\n",
-    "print(mae)"
+    "mae_rf = mean_absolute_error(y_test, RF.predict(X_test))\n",
+    "print(mae_rf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -488,14 +606,23 @@
     }
    ],
    "source": [
-    "relative_error = round(mae/average_present_price *100, 2)\n",
+    "relative_error = round(mae_rf/average_present_price *100, 2)\n",
     "print(relative_error, \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As one can see, the result is clearly better than the one we had just a moment ago. Is it good yet, probably not. Is it enough? As I've said, it depends on the scenario. Will we try to improve it further? Not now at least. We have used here everything we have learng this far from that introductory Kaggle course. Spoiler: the next step may be encoding the categorical data and normalizing the numerical ones, in other words, feature engineering. But that will only come in another time. \n",
+    "\n",
+    "In any case, this is my quick tutorial/walkthrough on how to create your first Decision Tree Machine Learning algorithm to predict the price of used cars. The notebook file will be available for download on my GitHub [**here**](https://github.com/DouglasRFLeite/UsedCarsPricePrediction.git) alongside the dataset used. I hope this helped you in any way but really, as I always say, even if it didn’t help you, it helped me tremendously so it’s worth it. See you soon!"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +638,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "260d53f25ae0bf85bd6e3ec476b46d4eecc4d51e8d1a97900adb19c003316dfe"
