Solved data cleaning and first model

--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -262,43 +262,79 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(0, 2)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>(0, 1)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(0, 2)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>(0, 2)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(0, 1)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             0\n",
-       "0    (0, 2)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0\n",
-       "1    (0, 1)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0\n",
-       "2    (0, 2)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0\n",
-       "3    (0, 2)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0\n",
-       "4    (0, 1)\\t1.0\\n  (0, 3)\\t1.0\\n  (0, 6)\\t1.0"
+       "     0    1    2    3    4    5    6\n",
+       "0  0.0  0.0  1.0  1.0  0.0  0.0  1.0\n",
+       "1  0.0  1.0  0.0  1.0  0.0  0.0  1.0\n",
+       "2  0.0  0.0  1.0  1.0  0.0  0.0  1.0\n",
+       "3  0.0  0.0  1.0  1.0  0.0  0.0  1.0\n",
+       "4  0.0  1.0  0.0  1.0  0.0  0.0  1.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,9 +342,301 @@
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "encoder = OneHotEncoder()\n",
+    "encoder = OneHotEncoder(sparse = False)\n",
     "cat_cols_OH = pd.DataFrame(encoder.fit_transform(cat_cols))\n",
+    "cat_cols_OH.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fuel_Type_CNG</th>\n",
+       "      <th>Fuel_Type_Diesel</th>\n",
+       "      <th>Fuel_Type_Petrol</th>\n",
+       "      <th>Selling_type_Dealer</th>\n",
+       "      <th>Selling_type_Individual</th>\n",
+       "      <th>Transmission_Automatic</th>\n",
+       "      <th>Transmission_Manual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fuel_Type_CNG  Fuel_Type_Diesel  Fuel_Type_Petrol  Selling_type_Dealer  \\\n",
+       "0            0.0               0.0               1.0                  1.0   \n",
+       "1            0.0               1.0               0.0                  1.0   \n",
+       "2            0.0               0.0               1.0                  1.0   \n",
+       "3            0.0               0.0               1.0                  1.0   \n",
+       "4            0.0               1.0               0.0                  1.0   \n",
+       "\n",
+       "   Selling_type_Individual  Transmission_Automatic  Transmission_Manual  \n",
+       "0                      0.0                     0.0                  1.0  \n",
+       "1                      0.0                     0.0                  1.0  \n",
+       "2                      0.0                     0.0                  1.0  \n",
+       "3                      0.0                     0.0                  1.0  \n",
+       "4                      0.0                     0.0                  1.0  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols_OH.index = cat_cols.index\n",
+    "OH_col_names = encoder.get_feature_names_out(cat_col_names)\n",
+    "cat_cols_OH.columns = OH_col_names\n",
     "cat_cols_OH.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Present_Price</th>\n",
+       "      <th>Driven_kms</th>\n",
+       "      <th>Owner</th>\n",
+       "      <th>Fuel_Type_CNG</th>\n",
+       "      <th>Fuel_Type_Diesel</th>\n",
+       "      <th>Fuel_Type_Petrol</th>\n",
+       "      <th>Selling_type_Dealer</th>\n",
+       "      <th>Selling_type_Individual</th>\n",
+       "      <th>Transmission_Automatic</th>\n",
+       "      <th>Transmission_Manual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>5.59</td>\n",
+       "      <td>27000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>9.54</td>\n",
+       "      <td>43000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>9.85</td>\n",
+       "      <td>6900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>5200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>6.87</td>\n",
+       "      <td>42450</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Present_Price  Driven_kms  Owner  Fuel_Type_CNG  Fuel_Type_Diesel  \\\n",
+       "0  2014           5.59       27000      0            0.0               0.0   \n",
+       "1  2013           9.54       43000      0            0.0               1.0   \n",
+       "2  2017           9.85        6900      0            0.0               0.0   \n",
+       "3  2011           4.15        5200      0            0.0               0.0   \n",
+       "4  2014           6.87       42450      0            0.0               1.0   \n",
+       "\n",
+       "   Fuel_Type_Petrol  Selling_type_Dealer  Selling_type_Individual  \\\n",
+       "0               1.0                  1.0                      0.0   \n",
+       "1               0.0                  1.0                      0.0   \n",
+       "2               1.0                  1.0                      0.0   \n",
+       "3               1.0                  1.0                      0.0   \n",
+       "4               0.0                  1.0                      0.0   \n",
+       "\n",
+       "   Transmission_Automatic  Transmission_Manual  \n",
+       "0                     0.0                  1.0  \n",
+       "1                     0.0                  1.0  \n",
+       "2                     0.0                  1.0  \n",
+       "3                     0.0                  1.0  \n",
+       "4                     0.0                  1.0  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = pd.concat([num_cols, cat_cols_OH], axis=1)\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.013047774993256989\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "\n",
+    "model = XGBRegressor(random_state=7)\n",
+    "model.fit(X,y)\n",
+    "predictions = model.predict(X)\n",
+    "\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "mae = mean_absolute_error(predictions, y)\n",
+    "print(mae)"
    ]
   },
   {
