--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4       Dealer       Manual      0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "4  0.0  1.0  0.0  1.0  0.0  0.0  1.0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "4                      0.0                     0.0                  1.0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -602,19 +602,19 @@
        "4                     0.0                  1.0  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = pd.concat([num_cols, cat_cols_OH], axis=1)\n",
-    "X.head()"
+    "X_OH = pd.concat([num_cols, cat_cols_OH], axis=1)\n",
+    "X_OH.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -629,14 +629,80 @@
     "from xgboost import XGBRegressor\n",
     "\n",
     "model = XGBRegressor(random_state=7)\n",
-    "model.fit(X,y)\n",
-    "predictions = model.predict(X)\n",
+    "model.fit(X_OH,y)\n",
+    "predictions = model.predict(X_OH)\n",
     "\n",
     "\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
     "mae = mean_absolute_error(predictions, y)\n",
     "print(mae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9153795666463147\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "\n",
+    "preprocessor = ColumnTransformer([\n",
+    "    (\"cat_cols\", OneHotEncoder(sparse=False, handle_unknown= 'ignore'), cat_col_names),\n",
+    "    (\"num_cols\", 'passthrough', num_col_names)\n",
+    "])\n",
+    "\n",
+    "model = XGBRegressor(random_state=7)\n",
+    "\n",
+    "\n",
+    "pipe = Pipeline(steps=[\n",
+    "    ('preprocess', preprocessor),\n",
+    "    ('model', model)\n",
+    "])\n",
+    "\n",
+    "pipe.fit(X,y)\n",
+    "pred = pipe.predict(X)\n",
+    "mae = mean_absolute_error(pred, y)\n",
+    "\n",
+    "cv_scores = -cross_val_score(pipe, X, y, scoring='neg_mean_absolute_error', cv=5)\n",
+    "mae = cv_scores.mean()\n",
+    "\n",
+    "\n",
+    "print(mae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.dtype[object_]' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\DevSoft\\Studying\\Kaggle\\Project1_UsedCars\\UsedCarsPricePrediction\\XGBoost.ipynb Célula: 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/DevSoft/Studying/Kaggle/Project1_UsedCars/UsedCarsPricePrediction/XGBoost.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m OH_col_names\u001b[39m.\u001b[39;49mdtype()\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.dtype[object_]' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
